--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -1,23 +1,14 @@
 ---
-import { BadgeDollarSign, CalendarSync, User } from 'lucide-react';
+import { User } from 'lucide-react';
 import Layout from '@/layouts/Layout.astro';
-import { APIDocumentation } from '@/components/admin/api-documentation';
-import { Label } from '@/components/ui/label';
-import { Input } from '@/components/ui/input';
 
 import { CustomerService } from '@/lib/services/customer';
-import { SubscriptionService } from '@/lib/services/subscription';
-import { CustomerSubscriptionService } from '@/lib/services/customer_subscription';
 
 const { DB } = Astro.locals.runtime.env;
 
 const customerService = new CustomerService(DB);
-const subscriptionService = new SubscriptionService(DB);
-const customerSubscriptionService = new CustomerSubscriptionService(DB);
 
 const customers = await customerService.getAll();
-const subscriptions = await subscriptionService.getAll();
-const customerSubscriptions = await customerSubscriptionService.getAll();
 
 const data = [
   {
@@ -25,17 +16,6 @@ const data = [
     value: customers.length,
     icon: User,
     href: '/admin/customers'
-  },
-  {
-    name: 'Subscriptions',
-    value: subscriptions.length,
-    icon: BadgeDollarSign,
-    href: '/admin/subscriptions'
-  },
-  {
-    name: 'Customer Subscriptions',
-    value: customerSubscriptions.length,
-    icon: CalendarSync
   }
 ]
 ---
@@ -73,12 +53,5 @@ const data = [
         )
       ))}
     </div>
-
-    <section class="space-y-4">
-      <h2 class="text-3xl font-bold tracking-tight">API</h2>
-      <div>
-        <APIDocumentation client:only="react" />
-      </div>
-    </section>
   </div>
 </Layout>
